--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 
 
 body {
-  margin: 40px;
+  
 }
 
 .wrapper {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(4, [col] 100px ) ;
+    grid-template-columns: repeat(4, [col] 25% ) ;
     grid-template-rows: repeat(3, [row] auto  );
     background-color: rgb(158, 158, 158);
     color: rgb(107, 93, 119);
+    width: 100%;
   }
 
   .box {
@@ -18,7 +19,7 @@ body {
     color: #fff;
     border-radius: 5px;
     padding: 20px;
-
+    border-collapse: collapse;
   }
 
   logo {
@@ -48,6 +49,7 @@ body {
   footer {
     grid-column: col / span 4;
     grid-row: row 3;
+    width: 100%;
   }
 
 
@@ -58,7 +60,7 @@ body {
 
  /* unvisited link */
 a:link {
-  color: rgb(160, 253, 217);
+  color: rgb(253, 239, 160);
 }
 
 /* visited link */
