--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   logo {
     grid-column: col / span 2;
     grid-row: row ;
+    
   }
 
 
@@ -54,7 +55,14 @@ body {
 
 
 
+.banner{
+    max-width: 100%;
+    height: auto;
+}
 
+ul{
+  list-style-type:none;
+}
 
 
 
@@ -71,6 +79,7 @@ a:visited {
 /* mouse over link */
 a:hover {
   color: hotpink;
+  background-color: rgb(51, 94, 58);
 }
 
 /* selected link */
