Formatted Design Elements

--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-
-
-body {
-  
+body{
+  margin: 0px;
 }
 
 .wrapper {
@@ -32,6 +30,7 @@ body {
   header {
     grid-column: col 3 / span 2 ;
     grid-row: row ;
+    font-family: impact;
   }
 
 
@@ -40,10 +39,19 @@ body {
     grid-row: row 2 ;
   }
 
+  nav a:link{
+    text-decoration: none;
+  }
+
+  nav ul{
+  list-style-type:none;
+ }
+
 
   main {
     grid-column: col 2 / span 3 ;
     grid-row: row 2 ;
+    font-family: sans-serif;
   }
 
 
@@ -51,18 +59,20 @@ body {
     grid-column: col / span 4;
     grid-row: row 3;
     width: 100%;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
   }
 
 
 
 .banner{
-    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 45%;
     height: auto;
 }
 
-ul{
-  list-style-type:none;
-}
+
 
 
 
